feat: add change password endpoint (#382)
